--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     "noEmit": true,
     "allowImportingTsExtensions": true,
   },
-  "include": ["src/**/*", "tests/**/*"],
+  "include": ["src/**/*", "tests/**/*", "src/experiments.ts"],
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
